'many fixes, nav spacing and styling fixed'

--- a/app/styles.css
+++ b/app/styles.css
@@ -109,26 +109,26 @@ div.series-search-container input {
 
 
 div.series-search-container input.series-search {
-  height:  2em;
-  max-height: 2em;
+  height:  1.6vw;
+  max-height: 1.6vw;
     
   padding-block: 0px;
   padding-inline: 0px;
 }
 
 div.series-search-button {
+  margin-left: 0.2vw;
   display: inline-block;
   vertical-align: middle;
   background-color: #2B72F6;
-  width:  20%;
-  width:  5vh;
-
-
-  height:  2em;
+  width:  3vw;
+  height:  2vw;
   max-height: 2em;
   background-image: url("/magnifying_glass.png");
-  background-size: contain;
+  background-size: 40%;
+  background-position: center;
   background-repeat: no-repeat;
+  border-radius: 4px;
 }
 
 div.carousel-container {
@@ -157,6 +157,8 @@ div.purple-bar-container a.top-title {
 }
 
 div.navigation-bar-container {
+  position: relative;
+  z-index: 1000;
   background-color: #ededed;
   height: 1.2em;
   min-height: 1.2em;
@@ -625,16 +627,17 @@ div.content-credits p {}
 
 @media only screen and (max-width: 900px) {
 /* navigation */
-  .hidden {
+  .mobile-hidden {
     display: none;
   }
 
   div.navigation-bar-container {
-    position: absolute;
+    position: fixed;
     top: 0;
     min-width: 100%;
     width: 100%;
     margin: 0;
+    padding: 0;
     height: inherit;
   }
 
@@ -647,22 +650,22 @@ div.content-credits p {}
     display: none;
   }
 
-  a.navigation-link {
+  a.navigation-link, a.drawer-item, span.drawermenu-label, a.drawer-item div.drawer-title {
+    font-size: 3.6vw;
     position: relative;
     display: block;
   }
   
   div.affiliated-websites-menu, div.about-menu {
     display: block;
-    margin-bottom: 2vh;
-    height: 2em;
     right: initial;
   }
 
-  div.drawermenu-container, span.drawermenu-label, div.about-menu, div.drawermenu-container div.drawermenu-items, div.affiliated-websites-menu a.drawer-item,  div.about-menu a.drawer-item, span.drawermenu-label {
+  div.drawermenu-container, span.drawermenu-label, div.drawermenu-container div.drawermenu-items, div.affiliated-websites-menu a.drawer-item, a.navigation-link, div.about-menu a.drawer-item, span.drawermenu-label {
     min-width: 100%;
     display: block;
     width: 100%;
+    position: relative;
   }
 
   span.drawermenu-label {
@@ -672,7 +675,7 @@ div.content-credits p {}
   }
 
   div.page-titlebar {
-    display: none;
+/*    display: none;*/
   }
 
   div.drawermenu-container a.drawer-item, a.navigation-link div {
@@ -680,8 +683,15 @@ div.content-credits p {}
     font-size: 3.6vw;
   }
 
+  div.drawermenu-container a.drawer-item, a.navigation-link, span.drawermenu-label {
+    padding-top: 1vh;
+    height: 4vh;
+    max-height: 4vh;
+  }
+
   div.drawermenu-container a.drawer-item, a.navigation-link {
     border: 1px solid white;
+    color: #430467;
   }
 
   div.drawermenu-items {
@@ -690,19 +700,18 @@ div.content-credits p {}
     padding: 0;
   }
 
-  div.drawermenu-items a.drawer-item div.drawer-subtitle{
+  div.drawermenu-items a.drawer-item div.drawer-subtitle {
     display: none;
   }
 
-  div.drawermenu-items a.drawer-item {
+  div.drawermenu-items a.drawer-item, span.drawermenu-label {
     border: 1px solid white;
     padding: 0;
-    font-size: 3.6vw;
+    padding-top: 1vh;
   }
 
   a.drawer-item div.drawer-title {
     text-align: center;
-    font-size: 4vw;
     font-weight: normal;
   }
 
@@ -710,17 +719,106 @@ div.content-credits p {}
     font-size: 6vw;
     color: #fff;
     background-color: #430467;
-    width: 100%;
+    width: 96vw;
     height: 2em;
     display: block;
+    padding-left: 4vw;
+    padding-top: 4vw;
     background-image: url("/menu-white.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
   }
 
-  /* body */
+  /* title bar */
+  div.page-titlebar {
+    position: relative;
+    min-height: 30vh;
+    height: 30vh;
+    background-position: center;
+    background-size: cover;
+  }
+
+  h1.page-titlebar-title {
+    font-size: 8vw;
+    width: 100%;
+    display: block;
+  }
+
+  /*  index pages */
+  div.pagelinks-container {
+    margin-bottom: 8vh;
+  }
+
+  div.pagelink {
+    display: block;
+    width: 84vw;
+    height: 70.5vw;
+    margin: 0;
+  }
+
+  div.pagelink-image {
+    width: 84vw;
+    height: 70.5vw;
+  }
+
+  div.pagelink-title {
+    text-align: center;
+  }
+
+  div.author-bubble {
+    width: 16vw;
+    height: 16vw;
+  }
+
+  div.author-bubble.box-attach {
+    right: -4vw;
+    bottom: -4vw;
+  }
+
+  /* show page body */
   div.page-container {
-    display: none;
+  }
+
+  div.page-sidebar, div.page-body-container, div.page-titlebar, div.page-titlebar h1.page-titlebar-title {
+    width: 100%;
+    max-width: 100%;
+    display: block;
+    margin: 0;
+    padding: 0;
+  }
+
+  div.page-sidebar, div.page-body-container {
+    margin-top: 4vh;    
+  }
+
+  div.page-body-container div.page-body, div.page-sidebar {
+    padding-left: 4vw;
+    padding-right: 4vw;
+    font-size: 4vw;
+    width: 92vw;
+  }
+
+  div.content-relatedcontent a {
+    display: block;
+    width: 92vw;
+  }
+
+  /* footer */
+  div.bottom-bar-container {
+    display: block;
+    height: inherit;
+  }
+
+  div.bottom-bar-row, div.bottom-bar-column, a.bottom-bar-link, div.bottom-bar-logos, div.bottom-bar-doublecolumn {
+    font-size: 4vw;
+    margin: 0;
+    text-align: center;
+    display: block;
+    width: 100%;
+  }
+
+  div.bottom-bar-logos img {
+    width: 30vw;
   }
 }
